GitHub App release

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,1 +1,22 @@
-Unable to find <%= req.url %>
+<div class="container">
+<h2>404</h2>
+
+<% if (locals.flash && flash.warning) { %>
+	<div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <%= flash.warning %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+<% } %>
+
+Unable to find <samp><%= req.url %></samp>
+
+<% if (locals.flash && flash.err_message) { %>
+	<pre><%= flash.err_message %></pre>
+<% } %>
+<% if (locals.flash && flash.err) { %>
+	<pre><%= JSON.stringify(flash.err) %></pre>
+<% } %>
+
+</div>
