--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,78 +1,66 @@
 <div class="container" id="account">
-	<% if (repos.length > 0) { %>
-		<h3>Your Public Swift Repositories</h3>
-		<table class="table table-responsive table-striped table-hover">
-		<thead class="thead-dark">
-			<tr>
-				<th scope="col">Repository</th>
-				<th scope="col">Description</th>
-				<th></th>
-			</tr>
-			</thead>
-			<tbody>
-		  <% repos.forEach(function(repo){ %>
-			<% if (repo.language === "Swift" && repo.owner.login === user.github_login) { %>
-			<tr>
-				<td><a href="<%= repo.html_url %>"><%= repo.name %></a></td>
 
-				<td><%= repo.description %></td>
+	<% if (locals.needsInstall) { %>
+		<h3>Install GitHub App</h3>
+		<p>In order to have your packages automatically updated, you will need to install the GitHub application and enable it your desired repository.</p>
 
-				<td>
-					<form action="/add" method="post" class="form-inline">
-					<input name="url" id="url" type="hidden" value="<%= repo.html_url %>" />
-					<button type="submit" class="btn btn-primary">Add</button>
-					</form>
-				</td>
-
-			</tr>
-			<% } %>
-		  <% }); %>
-		  </tbody>
-		</table>
-		<% if (user_info.public_repos > pageSize)  { %>
-			<nav aria-label="Page navigation example">
-			  	<ul class="pagination justify-content-center">
-			  		<% if(page <= 1) { %>
-			    	<li class="page-item disabled">
-			    	<a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a
-			    	</li>
-			    	<% } else { %>
-			    	<li class="page-item">
-			    	<a class="page-link" href="?page=<%= page-1 %>" tabindex="-1" aria-disabled="false">Previous</a>
-			    	</li>
-			    	<li class="page-item"><a class="page-link" href="?page=<%= page-1 %>"><%= page-1 %></a></li>
-			    	<% } %> 	
-			    	<li class="page-item active" aria-current="page"><a class="page-link" href="?page=<%= page %>"><%= page %></a></li>
-
-			    	<% if (page*pageSize > user_info.public_repos) { %>
-				    	<li class="page-item disabled">
-				      	<a class="page-link" href="?page=<%= nextPage %>" aria-disabled="true">Next</a>
-				    	</li>
-			    	<% } else { %>
-			    		<li class="page-item"><a class="page-link" href="?page=<%= nextPage %>"><%= nextPage %></a></li>
-				    	<li class="page-item">
-				      	<a class="page-link" href="?page=<%= nextPage %>">Next</a>
-				    	</li>
-			    	<% } %>
-			    	
-			  	</ul>
-			</nav>
-		<% } %>
+		<a class="btn btn-primary" href="<%= whoami.html_url %>/installations/new/permissions?target_id=<%= whoami.owner.id %>">Install GitHub App</a>
 	<% } else { %>
-		<h3>You don't have any repositories</h3>
+		<div class="d-flex justify-content-between">
+			<a class="btn btn-social btn-github" href="https://github.com/settings/installations/<%= app.id %>"><span class="fa fa-github"></span>GitHub App Settings</a>
+			<a class="btn btn-primary" href="https://github.com/apps/<%= app.app_slug %>/installations/new">+</a>
+		</div>
+
+		<% if (repos.total_count > 0) { %>
+			<h2>Enabled Repositories</h2>
+			<table class="table table-responsive table-striped table-hover">
+				<thead class="thead-dark">
+					<tr>
+						<th scope="col">Repository</th>
+						<th scope="col">Description</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% repos.repositories.forEach(function(repo) { %>
+						<tr>
+							<td><a href="<%= repo.html_url %>"><%= repo.name %></a></td>
+
+							<td><%= repo.description %></td>
+						</tr>
+					<% }) %>
+				</tbody>
+			</table>
+
+			<% if (repos.total_count > per_page) { %>
+				<nav aria-label="Page navigation example">
+				  	<ul class="pagination justify-content-center">
+				  		<% if(page <= 1) { %>
+					    	<li class="page-item disabled">
+					    	<a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a
+					    	</li>
+				    	<% } else { %>
+				    	<li class="page-item">
+				    		<a class="page-link" href="?page=<%= page-1 %>" tabindex="-1" aria-disabled="false">Previous</a>
+				    	</li>
+				    	<li class="page-item"><a class="page-link" href="?page=<%= page-1 %>"><%= page-1 %></a></li>
+				    	<% } %> 	
+				    	<li class="page-item active" aria-current="page"><a class="page-link" href="?page=<%= page %>"><%= page %></a></li>
+
+				    	<% if (page*per_page > repos.total_count) { %>
+					    	<li class="page-item disabled">
+					      	<a class="page-link" href="?page=<%= page+1 %>" aria-disabled="true">Next</a>
+					    	</li>
+				    	<% } else { %>
+				    		<li class="page-item"><a class="page-link" href="?page=<%= page+1 %>"><%= page+1 %></a></li>
+					    	<li class="page-item">
+					      	<a class="page-link" href="?page=<%= page+1 %>">Next</a>
+					    	</li>
+				    	<% } %>
+				  	</ul>
+				</nav>
+			<% } %>
+		<% } else { %>
+			No enabled repositories
+		<% } %>
 	<% } %>
-
-	<p class="text-muted">
-		Missing a repository? Only public repositories you own with the Language as Swift are listed. Contact <a href="https://zac.gorak.us">@twodayslate</a> if you think there is an error. You can also manually add a public repository below.
-	</p>
-
-	<form action="/add" method="post" class="form">
-		<div class="input-group">
-	    <input class="form-control form-control-lg" type="url" placeholder="https://github.com/%s/%s" id="url" name="url">
-	    <span class="input-group-append">
-	    	<button type="submit" class="btn btn-primary">Add</button>
-	    	</span>
-	    </input>
-	    </div>
-	</form>
 </div>
