--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
 		<div class="card">
 			<h5 class="card-header">Login</h5>
 			<div class="card-body">
-			    <a class="btn btn-block btn-social btn-github" href="/auth/github">
+			    <a class="btn btn-block btn-social btn-github" href="/auth/github/login">
 			    	<span class="fa fa-github"></span> Sign in with GitHub
 			 	</a>
 			 </div>
