db migration fix for mod

--- a/views/mod.ejs
+++ b/views/mod.ejs
@@ -14,9 +14,9 @@
 		<tbody>
 	  <% processing_packages.forEach(function(package){ %>
 		<tr>
-			<td><a href="/<%= package.info.full_name %>"><%= package.info.full_name %></a></td>
+			<td><% if(package.info) { %><a href="/<%= package.info.full_name %>"><%= package.info.full_name %></a><% } %></td>
 
-			<td><%= package.info.description %></td>
+			<td><% if(package.info) { %><%= package.info.description %><% } %></td>
 			<td>
 				<form action="/add" method="POST">
 					<input type="hidden" id="url" name="url" value="<%= package.info.html_url %>"/>
@@ -48,15 +48,17 @@
 		<tbody>
 	  <% all_packages.forEach(function(package){ %>
 		<tr>
-			<td><a href="/<%= package.info.full_name %>"><%= package.info.full_name %></a></td>
-			<td><%= package.info.description %></td>
+			<td><% if(package.info) { %><a href="/<%= package.info.full_name %>"><%= package.info.full_name %></a><% } else { %><%= package.full_name %><% } %></td>
+			<td><% if(package.info) { %><%= package.info.description %><% } %></td>
 			<td><%= package.error %></td>
 			<td>
-				<form action="/add" method="POST">
-					<input type="hidden" id="url" name="url" value="<%= package.info.html_url %>"/>
-					<input type="hidden" id="reprocess" name="reprocess" value="True" />
-					<button type="submit" class="btn btn-primary">Process</button>
-				</form>
+				<% if(package.info) { %>
+					<form action="/add" method="POST">
+						<input type="hidden" id="url" name="url" value="<%= package.info.html_url %>"/>
+						<input type="hidden" id="reprocess" name="reprocess" value="True" />
+						<button type="submit" class="btn btn-primary">Process</button>
+					</form>
+				<% } %>
 			</td>
 			<% if (locals.user && user.isAdmin) { %>
 				<td><form action="/delete/<%= package.id %>" method="POST"><button type="submit" class="btn btn-danger">Delete</button></form></td>
