--- a/views/mod.ejs
+++ b/views/mod.ejs
@@ -18,11 +18,13 @@
 
 			<td><% if(package.info) { %><%= package.info.description %><% } %></td>
 			<td>
-				<form action="/add" method="POST">
-					<input type="hidden" id="url" name="url" value="<%= package.info.html_url %>"/>
-					<input type="hidden" id="reprocess" name="reprocess" value="True" />
-					<button type="submit" class="btn btn-primary">Process</button>
-				</form>
+				<% if(package.info) { %>
+					<form action="/add" method="POST">
+						<input type="hidden" id="url" name="url" value="<%= package.info.html_url %>"/>
+						<input type="hidden" id="reprocess" name="reprocess" value="True" />
+						<button type="submit" class="btn btn-primary">Process</button>
+					</form>
+				<% } %>
 			</td>
 			<% if (locals.user && user.isAdmin) { %>
 				<td><form action="/delete/<%= package.id %>" method="POST"><button type="submit" class="btn btn-danger">Delete</button></form></td>
