markdown-body for about and release

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,4 @@
-<div class="container" id="about">
+<div class="container markdown-body" id="about">
 	<h2>About the Swift Package Manager</h2>
 
 	<p>
