--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -76,6 +76,7 @@
                     <div class="row">
                         <div class="col">
                             <a href="/whoami"><img src="/images/Swift_logo.png" width="24" height="24" class="mb-2" alt=""></a>
+                            <small class="mx-1 text-muted"><%= packageCount %> successfully parsed packages</small>
                             <small class="d-block mb-3 text-muted">Copyright &copy; 2020 All rights reserved.</small>
                             <small class="d-block mb-3 text-muted">Swift and the Swift logo are trademarks of Apple Inc.</small>
                         </div>
