--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,15 @@
 		<tbody>
 	  <% popular_packages.forEach(function(package){ %>
 		<tr>
-			<td><a href="/<%= package.info.full_name %>"><%= package.info.name %></a></td>
+			<td class="package-<%= package.id %>">
+				<a href="/<%= package.info.full_name %>">
+					<% if (package.description) { %>
+						<%= package.description.name %>
+					<% } else { %>
+						<%= package.info.name %>
+					<% } %>
+				</a>
+			</td>
 
 			<td><%= package.info.description %></td>
 		</tr>
@@ -49,7 +57,13 @@
 	<ul class="list-group list-group-flush">
 	  <% recently_created_packages.forEach(function(package){ %>
 		<li class="list-group-item d-flex justify-content-between align-items-center">
-			<a href="/<%= package.info.full_name %>"><%= package.info.name %></a>
+			<a href="/<%= package.info.full_name %>">
+				<% if (package.description) { %>
+					<%= package.description.name %>
+				<% } else { %>
+					<%= package.info.name %>
+				<% } %>
+			</a>
 			<span class="badge badge-primary badge-pill"><%= package.info.stargazers_count %></span>
 		</li>
 	  <% }); %>
