add recently released sidebar section and more name fixes

--- a/views/packages.ejs
+++ b/views/packages.ejs
@@ -15,7 +15,13 @@
 		<tbody>
 	  <% packages.forEach(function(package){ %>
 		<tr>
-			<td><a href="/<%= package.info.full_name %>"><%= package.info.name %></a></td>
+			<td><a href="/<%= package.info.full_name %>">
+				<% if (package.description) { %>
+					<%= package.description.name %>
+				<% } else { %>
+					<%= package.info.name %>
+				<% } %>
+			</a></td>
 
 			<td><%= package.info.description %></td>
 		</tr>
