--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
 	<table class="table table-responsive table-striped table-hover">
 		<thead class="thead-dark">
 			<tr>
-			<th scope="col">Repository</th>
+			<th scope="col">Name</th>
 			<th scope="col">Description</th>
 			</tr>
 		</thead>
@@ -53,7 +53,7 @@
 	
 </div>
 <div class="col-sm-4">
-	<h2>Recently Added Swift Packages</h2>
+	<h2>Recently Added</h2>
 	<ul class="list-group list-group-flush">
 	  <% recently_created_packages.forEach(function(package){ %>
 		<li class="list-group-item d-flex justify-content-between align-items-center">
@@ -67,7 +67,22 @@
 			<span class="badge badge-primary badge-pill"><%= package.info.stargazers_count %></span>
 		</li>
 	  <% }); %>
-	  </tbody>
+	</ul>
+
+	<h2>Recently Released</h2>
+	<ul class="list-group list-group-flush">
+	  <% updatedPackages.forEach(function(package){ %>
+		<li class="list-group-item d-flex justify-content-between align-items-center">
+			<a href="/<%= package.info.full_name %>">
+				<% if (package.description) { %>
+					<%= package.description.name %>
+				<% } else { %>
+					<%= package.info.name %>
+				<% } %>
+			</a>
+			<span class="badge badge-primary badge-pill"><%= package.info.stargazers_count %></span>
+		</li>
+	  <% }); %>
 	</ul>
 	</div>
 	</div>
